tests/EtaX/EtaX.meth/EtaX.meth.04.check
// src:   val t3c: () => Any = meth _                 // ok
// 2.13-base ok
// 2.13-head ok    <no change>
// 2.13-new  ok    <no change>
// 3.0-old   ok    <no change>
// 3.0       ok    <no change>
// 3.1-migr  warn
-- Migration Warning: target/tests/EtaX/EtaX.meth.04.scala:16:28 ---------------
16 |  val t3c: () => Any = meth _                 // ok
   |                       ^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can use `(() => <function>())` instead
1 warning found

// 3.1       error
-- Error: target/tests/EtaX/EtaX.meth.04.scala:16:28 ---------------------------
16 |  val t3c: () => Any = meth _                 // ok
   |                       ^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can use `(() => <function>())` instead
1 error found


ok    ok    ok    ok    ok    warn  error
